# MUG-2026-03-10-Advent-of-Code

./: LICENSE  README.md
Perl/jammcq/day1/: .gitignore  1a.pl  1b.pl
Python/: .gitignore
Python/jimp/: .gitignore  day1_pt1_2025.py  day1_pt2_2025.py
Python/wolf/day1/succinct/: secret_entrance.py
Python/wolf/day1/verbose-teaching-project/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
Python/wolf/day1/verbose-teaching-project/src/secret_entrance/: __init__.py  dial.py  solve_day1.py  tools_not_exported.py
Python/wolf/day1/verbose-teaching-project/tests/: conftest.py  test_dial.py  test_journey.py  test_part1.py  test_part2.py  test_rotation.py  test_tools_not_exported.py
Rust/wolf/day1/src/: main.rs
